# prueba_tecnica_stopcardio

./: .env.example  .gitignore  Instrucciones.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  pytest.ini  test_api.http
backend/.devcontainer/: devcontainer.json
backend/.github/: copilot-instructions.md
backend/alembic/: env.py
backend/alembic/versions/: 20251014_1112-2386bdf51fa0_initial_setup.py  20251014_1159-b5b982037328_add_user_table.py  20251015_1449-34c25f9618d2_initial_migration.py  20251015_1932-bceaad179931_add_solicitud_table_and_user_vacation_.py  20251016_1430-bca0d8d9e5b8_change_default_days.py  20251016_2312-a21826898b46_add_proposed_check_in_check_out.py  20251017_0129-e6241f909849_add_timezone_to_datetime_columns.py
backend/app/: __init__.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/routers/: __init__.py  auth.py  fichajes.py  users.py  vacaciones.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/models/: __init__.py  base.py  fichaje.py  solicitud.py  user.py
backend/app/repositories/: __init__.py  fichaje_repository.py  solicitud_repository.py  user_repository.py
backend/app/schemas/: __init__.py  fichaje.py  solicitud.py  user.py
backend/app/services/: __init__.py  fichaje_service.py  solicitud_service.py  user_service.py
backend/docs/: DECISIONES_ARQUITECTURA.md  Iteracion2-RESUMEN.md  Iteracion3.md  Iteracion5.md  PROTECCION_RUTAS.md  fastapi-cli-update.md  requisitos.md  setup-environment.md
backend/docs/iteraciones/: Iteracion1.md  Iteracion2.md  Iteracion3.md  Iteracion4.md  Iteracion5-COMPLETADA.md  Iteracion6.md  Iteracion7.md
backend/scripts/: README.md  check_environment.sh  seed_data.py  seed_data_psql.py  start_enviroment.sh
backend/tests/: conftest.py  test_auth.py  test_fichajes.py  test_solicitudes.py  test_users.py
frontend/: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/.devcontainer/: devcontainer.json
frontend/.github/: copilot-instructions.md
frontend/docs/: ANGULAR-20-GUIA.md  API.md  CHANGELOG.md  HISTORIAS-USUARIO.md  INDEX.md  PLAN-DESARROLLO.md  REQUISITOS.md  TIMEZONE-HANDLING.md  openapi.json
frontend/docs/iteraciones/: CHECKLIST-ITERACION-2.md  CHECKLIST-ITERACION-3.md  SESION-ITERACION-1.md  iteracion-0.md  iteracion-1.md  iteracion-2.md  iteracion-3.md  iteracion-4.md  iteracion-5.md  iteracion-6.md  resumen-iteracion-6.md
frontend/scripts/: setup-dev-env.sh
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
frontend/src/environments/: environment.prod.ts  environment.ts
(+91 files in other folders)
